[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "backtrader>=1.9.78.123",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "plotly>=6.2.0",
    "scipy>=1.16.0",
    "streamlit>=1.46.1",
    "yfinance>=0.2.64",
]
